--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.3.1",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
-    "expo-font": "^11.6.0",
+    "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.6",
     "react-native-big-slider": "^0.1.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
@@ -28,7 +28,8 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "@react-native-community/datetimepicker": "7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
